# data-pipelines

./: .gitignore  Dockerfile  README.md  scraping.duckdb
.github/workflows/: run-project.yml
real-estate-etl/: README.md  database.py  hello.py  pyproject.toml  scan_properties.py  scraper.py  telegram_api.py
real-estate-etl-dlt/: pyproject.toml  scraping_pipeline.py
real-estate-etl-dlt/.dlt/: .sources  config.toml
real-estate-etl/.github/workflows/: run-project.yml
real-estate-sqlmesh/: config.yaml  hello.py  pyproject.toml
real-estate-sqlmesh/models/: incremental_model.sql
